# pylxd

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .gitreview  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  CONTRIBUTORS.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  blacklist  openstack-common.conf  pyproject.toml  requirements.txt  run_integration_tests  run_integration_tests-16-04  run_integration_tests-18-04  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  commits.yml  release.yml  tests.yml  unittest.yml  zizmor.yml
contrib_testing/: README.md  local-http-test.py  local-unix-test.py  remote-test.py
doc/source/: api.rst  authentication.rst  certificates.rst  clustering.rst  conf.py  containers.rst  contributing.rst  events.rst  images.rst  index.rst  installation.rst  instances.rst  network-acls.rst  networks.rst  operations.rst  profiles.rst  projects.rst  storage-pools.rst  usage.rst
examples/: api_test.py  host_example.py  host_ping.py
integration/: README.md  busybox.py  run-integration-tests  run-integration-tests-in-a-vm  run-integration-tests-in-lxd  run_integration_tests  run_integration_tests-16-04  run_integration_tests-18-04  test_1_0.py  test_1_0_containers.py  test_1_0_events.py  test_1_0_images.py  test_1_0_network.py  test_1_0_profiles.py  test_base.py  test_client.py  test_cluster_members.py  test_containers.py  test_images.py  test_instances.py  test_networks.py  test_profiles.py  test_projects.py  test_proxies.py  test_root.py  test_storage.py  testing.py
migration/: busybox.py  run_migration_integration_tests-18-04  test_containers.py  testing.py
notes/: version-3-proposal.rst
pylxd/: __init__.py  api.py  base.py  certificate.py  client.py  connection.py  container.py  containerState.py  deprecation.py  exceptions.py  host.py  hosts.py  image.py  managers.py  mixin.py  model.py  network.py  operation.py  profile.py  profiles.py  utils.py
pylxd/deprecated/: api.py  base.py  certificate.py  connection.py  container.py  exceptions.py  hosts.py  image.py  network.py  operation.py  profiles.py  utils.py
pylxd/deprecated/tests/: __init__.py  fake_api.py  test_certificate.py  test_client.py  test_connection.py  test_container.py  test_host.py  test_image.py  test_image_alias.py  test_network.py  test_operation.py  test_profiles.py  utils.py
pylxd/models/: __init__.py  _model.py  certificate.py  cluster.py  cluster_member.py  container.py  image.py  instance.py  network.py  node.py  operation.py  profile.py  project.py  storage_pool.py  virtual_machine.py
pylxd/models/tests/: test_certificate.py  test_cluster.py  test_cluster_certificate.py  test_cluster_member.py  test_image.py  test_instance.py  test_model.py  test_network.py  test_operation.py  test_profile.py  test_project.py  test_storage.py
pylxd/tests/: __init__.py  fake_api.py  lxd.crt  lxd.key  mock_lxd.py  test_api.py  test_certificate.py  test_client.py  test_connection.py  test_container.py  test_host.py  test_hosts.py  test_image.py  test_image_alias.py  test_model.py  test_network.py  test_operation.py  test_profile.py  test_profiles.py  test_pylxd.py  testing.py  utils.py
pylxd/tests/functional/: test_host.py  test_image.py  utils.py
pylxd/tests/models/: test_certificate.py  test_cluster_member.py  test_container.py  test_image.py  test_instance.py  test_model.py  test_network.py  test_operation.py  test_profile.py  test_storage.py
pylxd/tests/unit/: test_host.py  test_image.py
