[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylxd"
version = "2.4.1"
description = "Python library for interacting with the LXD REST API"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Paul Hummer and others (see CONTRIBUTORS.rst)", email = "lxd@lists.canonical.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cryptography>=46.0.0",
    "python-dateutil>=2.4.2",
    "requests>=2.20.0",
    "requests-toolbelt>=1.0.0",
    "ws4py>=0.4.0",
]

[project.urls]
Homepage = "https://ubuntu.com/lxd"
Documentation = "https://pylxd.readthedocs.io/en/latest/"
Repository = "https://github.com/canonical/pylxd"
Issues = "https://github.com/canonical/pylxd/issues"

[project.optional-dependencies]
testing = [
    "ddt>=1.7.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "requests-mock>=1.2",
]
format = ["black", "flake8", "flake8-pyproject", "isort"]
check = ["mypy"]
doc = ["Sphinx"]
release = ["build", "twine>=6.0.0"]

[tool.setuptools.packages.find]
include = ["pylxd*"]

[tool.flake8]
show-source = true
ignore = ["E203", "E266", "E501", "W503", "W504"]
exclude = [".git", ".tox", "dist", "doc", "*egg", "build", "venv"]

[tool.black]
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true
warn_return_any = true
warn_unused_configs = true

[tool.check-manifest]
ignore = [
    ".git-blame-ignore-revs",
    ".readthedocs.yml",
    "contrib_testing/**",
]

[tool.tox]
requires = ["tox>=4.21"]
env_list = [
    "lint",
    "check",
    "coverage",
    "format",
    "integration",
    "integration-in-lxd",
    "unit",
]
skipsdist = true

[tool.tox.env.lint]
deps = [".[format]", "check-manifest"]
commands = [
    [
        "black",
        "--check",
        "--diff",
        "{toxinidir}",
    ],
    [
        "isort",
        "--check-only",
        "--diff",
        "{toxinidir}",
    ],
    [
        "flake8",
        "{toxinidir}",
    ],
    [
        "check-manifest",
        "{toxinidir}",
    ],
]

[tool.tox.env.unit]
use_develop = true
set_env = { "PYLXD_WARNINGS" = "none" }
deps = ".[testing]"
commands = [
    [
        "pytest",
        "--doctest-modules",
        { replace = "posargs", default = [
            "pylxd",
        ], extend = true },
    ],
]

[tool.tox.env.check]
deps = ".[check]"
commands = [["mypy", "-p", "pylxd", { replace = "posargs", extend = true }]]

[tool.tox.env.coverage]
deps = ".[testing]"
commands = [
    [
        "pytest",
        "--cov=pylxd",
        "pylxd",
        { replace = "posargs", extend = true },
    ],
]

[tool.tox.env.format]
deps = ".[format]"
commands = [["isort", "{toxinidir}"], ["black", "{toxinidir}"]]

[tool.tox.env.integration]
pass_env = ["LXD_*"]
deps = ".[testing]"
commands = [["pytest", "integration", { replace = "posargs", extend = true }]]

[tool.tox.env.integration-in-lxd]
commands = [["{toxinidir}/integration/run-integration-tests-in-lxd"]]

[tool.tox.env.doc]
deps = ".[doc]"
commands = [["{envpython}", "-m", "sphinx", "-a", "doc/source", "doc/build"]]
