[metadata]
name = pylxd
version = 2.3.0a1
description = python library for LXD
long_description = file: README.rst
author = Paul Hummer and others (see CONTRIBUTORS.rst)
author-email = lxc-devel@lists.linuxcontainers.org
home-page = http://www.linuxcontainers.org
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.6
packages = find:
install_requires =
    cryptography >= 3.2
    python-dateutil >= 2.4.2
    requests >= 2.20.0
    requests-toolbelt >= 0.8.0
    requests-unixsocket >= 0.1.5
    ws4py != 0.3.5, >= 0.3.4  # 0.3.5 is broken for websocket support

[options.extras_require]
testing =
    ddt >= 0.7.0
    mock-services >= 0.3
    pytest-cov == 2.10.1
    pytest >= 6.1.2
    # mock-services is old and unmaintained. Doesn't work with newer versions
    # of requests-mock. Thus, we have to pin it down.
    requests-mock < 1.2
format =
    black == 20.8b1
    flake8 >= 2.5.0
    isort == 5.6.4
check:
    mypy
i18n =
    Babel
doc =
    Sphinx

[flake8]
show-source = True
ignore = E203, E266, E501, W503, W504
builtins = _
exclude = .venv,.git,.tox,dist,doc,*egg,build

[mypy]
incremental = False
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
domain = pylxd
directory = pylxd/locale

[update_catalog]
domain = pylxd
output_dir = pylxd/locale
input_file = pylxd/locale/pylxd.pot

[extract_messages]
project = pylxd
keywords = _ gettext ngettext l_ lazy_gettext
output_file = pylxd/locale/pylxd.pot

[tox:tox]
minversion = 1.6
envlist = lint,check,py3
skipsdist = True

[testenv]
usedevelop = True
install_command = pip install -U {opts} {packages}
setenv =
    VIRTUAL_ENV={envdir}
    PYLXD_WARNINGS=none
deps =
    .[testing]
commands = pytest --cov=pylxd pylxd {posargs}

[testenv:integration]
commands =
    pytest integration {posargs}

[testenv:integration-in-lxd]
commands =
    {toxinidir}/integration/run-integration-tests-in-lxd

[testenv:migration]
commands = pytest migration {posargs}

[testenv:format]
deps =
    .[format]
commands=
    isort --profile black {toxinidir}
    black {toxinidir}

[testenv:lint]
deps =
    .[format]
commands =
    black --check {toxinidir}
    isort --profile black --check-only --diff {toxinidir}
    flake8 {toxinidir}

[testenv:check]
deps =
    .[check]
commands =
    mypy -p pylxd {posargs}

[testenv:i18n]
deps =
    .[i18n]
commands =
    {envpython} setup.py {posargs}

[testenv:doc]
deps =
    .[doc]
commands =
    {envpython} setup.py build_sphinx
