[metadata]
name = pylxd
version = 2.3.2a
description = python library for LXD
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Paul Hummer and others (see CONTRIBUTORS.rst)
author_email = lxd@lists.canonical.com
home_page = https://ubuntu.com/lxd
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.8
packages = find:
install_requires =
    cryptography >= 3.2
    python-dateutil >= 2.4.2
    requests >= 2.20.0
    requests-toolbelt >= 0.8.0
    requests-unixsocket >= 0.1.5
    urllib3 < 2
    ws4py != 0.3.5, >= 0.3.4  # 0.3.5 is broken for websocket support

[options.extras_require]
testing =
    ddt >= 0.7.0
    mock-services >= 0.3
    pytest-cov == 2.10.1
    pytest >= 6.1.2
    # mock-services is old and unmaintained. Doesn't work with newer versions
    # of requests-mock. Thus, we have to pin it down.
    requests-mock < 1.2
    # Python 3.12 no longer installs `setuptools` in venv
    # but mock-services depends on it for `pkg_resources`
    setuptools
format =
    black == 23.1.0
    flake8 >= 2.5.0
    isort == 5.6.4
check =
    mypy
doc =
    Sphinx

[flake8]
show-source = True
ignore = E203, E266, E501, W503, W504
exclude = .git, .tox, dist, doc, *egg, build

[mypy]
ignore_missing_imports = True
install_types = True
non_interactive = True
warn_return_any = True
warn_unused_configs = True

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[tox:tox]
minversion = 1.6
envlist = lint,check,coverage
skipsdist = True

[testenv]
usedevelop = True
setenv =
    PYLXD_WARNINGS=none
deps =
    .[testing]
commands =
    pytest {posargs:pylxd}

[testenv:integration]
commands =
    pytest integration {posargs}

[testenv:integration-in-lxd]
commands =
    {toxinidir}/integration/run-integration-tests-in-lxd

[testenv:migration]
commands = pytest migration {posargs}

[testenv:format]
deps =
    .[format]
commands=
    isort --profile black {toxinidir}
    black {toxinidir}

[testenv:lint]
deps =
    .[format]
commands =
    black --check {toxinidir}
    isort --profile black --check-only --diff {toxinidir}
    flake8 {toxinidir}

[testenv:check]
deps =
    .[check]
commands =
    mypy -p pylxd {posargs}

[testenv:coverage]
deps =
    .[testing]
commands = pytest --cov=pylxd pylxd {posargs}

[testenv:i18n]
deps =
    .[i18n]
commands =
    {envpython} setup.py {posargs}

[testenv:doc]
deps =
    .[doc]
commands =
    {envpython} setup.py build_sphinx
